<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/monday"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text1"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:padding="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Text2"
            android:id="@+id/textView2"
            android:padding="15dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text3"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:paddingLeft="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text4"
            android:id="@+id/textView4"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:paddingLeft="15dp"
            android:paddingBottom="10dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/black"
            android:minHeight="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text5"
            android:id="@+id/textView5"
            android:padding="15dp"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text6"
            android:id="@+id/textView6"
            android:padding="15dp"
            android:layout_below="@+id/textView5"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text7"
            android:id="@+id/textView7"
            android:paddingLeft="15dp"
            android:layout_below="@+id/textView6"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text8"
            android:id="@+id/textView8"
            android:paddingLeft="15dp"
            android:layout_below="@+id/textView7"
            android:layout_alignParentStart="true"
            android:paddingBottom="10dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/black"
            android:minHeight="4dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text9"
            android:id="@+id/textView9"
            android:padding="15dp"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text6"
            android:id="@+id/textView10"
            android:padding="15dp"
            android:layout_below="@+id/textView9"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text11"
            android:id="@+id/textView11"
            android:paddingLeft="15dp"
            android:layout_below="@+id/textView10"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text12"
            android:id="@+id/textView12"
            android:paddingLeft="15dp"
            android:layout_below="@+id/textView11"
            android:layout_alignParentStart="true"
            android:paddingBottom="10dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/black"
            android:minHeight="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/textView13"
            android:paddingLeft="15dp"
            android:layout_below="@+id/textView11"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/textView14"
            android:paddingLeft="15dp"
            android:layout_below="@+id/textView11"
            android:layout_alignParentStart="true" />

    </LinearLayout>
</ScrollView>